--- a/first assignment.css
+++ b/first assignment.css
@@ -1,10 +1,8 @@
 
-.inter-nav-logo {
+.inter-nav {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-size: 34px;
-  font-weight: 900;
 }
 .open-sans-unique {
   font-family: "Open Sans", sans-serif;
@@ -21,7 +19,10 @@ nav{
     justify-content: space-between;
     margin: 50px 150px;
 }
-
+.logo-style{
+    font-size: 34px;
+    font-weight: 900;
+}
 nav ul li{
     list-style: none;
 }
@@ -69,3 +70,75 @@ nav ul li{
     background-size: cover;
     padding: 5px 0 100px;
  }
+
+ /* Extra content styles */
+.extra-content{
+    display: flex;
+    justify-content: space-between;
+    margin: 116px 150px;
+}
+.extra-content-image{
+    width: 403px;
+    height: 328px;
+    border-radius: 48px;
+    align-items: center;
+    }
+
+.extra-content-title{
+    font-size: 42px;
+    font-weight: bold;
+    color: #252432;
+    margin: auto 10px;
+    margin-top: 62px;
+}
+
+.extra-content-discription{
+    font-size: 24px;
+    color: #252432;
+    margin: 23px 10px;
+}
+.extra-content-btn{
+    margin: auto 10px;
+}
+
+/* Users panel styles */
+.users{
+    margin: 120px 150px;
+    background-color: #E3E5FF;
+    border-radius: 24px;
+    text-align: center;
+
+}
+.users-content{
+    display: flex;
+    justify-content: space-between;
+    gap: 158px;
+
+
+}
+.users-title{
+    font-size: 38px;
+    font-weight: bold;
+    margin-bottom: 0px;
+    padding-top: 50px;
+    padding-bottom: 40px;
+
+}
+
+.users-column-title{
+    color: #4E47FF;
+    font-size: 80px;
+    font-weight: bold;
+    flex-wrap: wrap;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.users-column-subtitle{
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 24px;
+    margin-top: 0;
+    font-weight: normal
+}
+.users-panel-content{
+    padding: 0 142px 50px;
+}
