--- a/first assignment.css
+++ b/first assignment.css
@@ -184,3 +184,42 @@ textarea{
     width: 530px;
     margin-bottom: 71px;
 }
+/* main styles */
+main{
+   margin: 0 auto;
+    
+}
+/* footer styles */
+.footer-content{
+    background-color: white;
+    text-align: center;
+    padding: 104px 455px;
+}
+
+.footer-content h1{
+    font-size: 100px;
+    font-weight: 900;
+    color: #4E47FF;
+    margin-bottom: 0;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
+.logo-discription{
+    color: #8987A1;
+    font-size: 18px;
+}
+.footer-nav a{
+    text-decoration: none;
+    color: #8987A1;
+}
+.footer-nav{
+    display: flex;
+    gap: 48px;
+    justify-content: center;
+
+}
+.footer-nav a:hover{
+    color: #4E47FF;
+}
+
