--- a/first assignment.css
+++ b/first assignment.css
@@ -1,40 +1,42 @@
-
 .inter-nav {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
-.open-sans-unique {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight:400;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+
+.raleway-normal {
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
-/*  Nav style */
-nav{
+
+/* Nav style */
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 50px 150px;
 }
-.logo-style{
+
+.logo-style {
     font-size: 34px;
     font-weight: 900;
 }
-nav ul li{
+
+nav ul li {
     list-style: none;
 }
 
 /* Shared color */
-.text-color{
+.text-color {
     color: #4E47FF;
 }
-.bg-color{
+
+.bg-color {
     background-color: #F5F8FF;
 }
-.Primary-btn{
+
+.Primary-btn {
     background-color: #4E47FF;
     color: white;
     font-weight: bold;
@@ -44,50 +46,49 @@ nav ul li{
     border-radius: 10px;
     cursor: pointer;
 }
-.Primary-btn:hover{
+
+.Primary-btn:hover {
     background-color: blueviolet;
 }
 
 /* Banner styles */
 
-/* .banner{
-    justify-content: center;
-    margin: 309px 267px 152px 267px;
-}
- */
- .banner-title{
+.banner-title {
     font-size: 65px;
     font-weight: bold;
-  
- }
- .banner{
+
+}
+
+.banner {
     max-width: 905px;
     max-height: 237px;
     text-align: center;
     margin: 100px auto;
 
- }
- .banner-bg{
+}
+
+.banner-bg {
     background-image: url(Assets/Hero-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 5px 0 100px;
- }
+}
 
- /* Extra content styles */
-.extra-content{
+/* Extra content styles */
+.extra-content {
     display: flex;
     justify-content: space-between;
     margin: 116px 150px;
 }
-.extra-content-image{
+
+.extra-content-image {
     width: 403px;
     height: 328px;
     border-radius: 48px;
     align-items: center;
-    }
+}
 
-.extra-content-title{
+.extra-content-title {
     font-size: 42px;
     font-weight: bold;
     color: #252432;
@@ -95,31 +96,34 @@ nav ul li{
     margin-top: 62px;
 }
 
-.extra-content-discription{
+.extra-content-discription {
     font-size: 24px;
     color: #252432;
     margin: 23px 10px;
 }
-.extra-content-btn{
+
+.extra-content-btn {
     margin: auto 10px;
 }
 
 /* Users panel styles */
-.users{
+.users {
     margin: 120px 150px;
     background-color: #E3E5FF;
     border-radius: 24px;
     text-align: center;
 
 }
-.users-content{
+
+.users-content {
     display: flex;
     justify-content: space-between;
     gap: 158px;
 
 
 }
-.users-title{
+
+.users-title {
     font-size: 38px;
     font-weight: bold;
     margin-bottom: 0px;
@@ -128,7 +132,7 @@ nav ul li{
 
 }
 
-.users-column-title{
+.users-column-title {
     color: #4E47FF;
     font-size: 80px;
     font-weight: bold;
@@ -136,34 +140,98 @@ nav ul li{
     margin-bottom: 0;
     margin-top: 0;
 }
-.users-column-subtitle{
+
+.users-column-subtitle {
     color: rgba(0, 0, 0, 0.5);
     font-size: 24px;
     margin-top: 0;
     font-weight: normal
 }
-.users-panel-content{
+
+.users-panel-content {
     padding: 0 142px 50px;
 }
 
+/* challange part styles  */
+.reviews-title {
+    font-size: 42px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.reviews-section {
+    margin: 137px 151px;
+    justify-content: space-around;
+}
+
+.star-image {
+    display: flex;
+}
+
+.reviews-container {
+    display: flex;
+    gap: 20px;
+}
+
+.reviews {
+    background-color: white;
+    border-radius: 14px;
+    padding: 24px;
+    height: 243px;
+    width: 366px;
+}
+
+.reviewer-info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-top: 24px;
+}
+
+.reviewer-name {
+    margin: 0;
+    color: rgba(117, 117, 117, 1);
+    font-size: 16px;
+}
+
+.date {
+    margin: 0;
+    color: rgba(179, 179, 179, 1);
+    font-size: 16px;
+}
+
+.reviews-discription,
+.reviews-designer {
+    margin-top: 24px;
+}
+
+.reviewer-image {
+    border-radius: 80px;
+}
+
 /* form styles */
-.form-section{
+.form-section {
     margin: 92px 150px 14px;
     display: flex;
     justify-content: center;
     gap: 300px;
 
 }
-.form-title{
+
+.form-title {
     font-size: 97px;
     font-weight: bold;
 }
-.form-input h4{
+
+.form-input h4 {
     margin-bottom: 10px;
     font-weight: 600;
     font-size: 18;
 }
-.form-input input[type="email"], .form-input input[type="text"], textarea{
+
+.form-input input[type="email"],
+.form-input input[type="text"],
+textarea {
     height: 70px;
     width: 497px;
     border-radius: 10px;
@@ -175,28 +243,32 @@ nav ul li{
     border: none;
 
 }
-textarea{
+
+textarea {
     height: 135px;
 }
-.button2{
+
+.button2 {
     display: block;
     height: 62px;
     width: 530px;
     margin-bottom: 71px;
 }
+
 /* main styles */
-main{
-   margin: 0 auto;
-    
+main {
+    margin: 0 auto;
+
 }
+
 /* footer styles */
-.footer-content{
+.footer-content {
     background-color: white;
     text-align: center;
     padding: 104px 455px;
 }
 
-.footer-content h1{
+.footer-content h1 {
     font-size: 100px;
     font-weight: 900;
     color: #4E47FF;
@@ -205,21 +277,23 @@ main{
     padding-right: 150px;
 }
 
-.logo-discription{
+.logo-discription {
     color: #8987A1;
     font-size: 18px;
 }
-.footer-nav a{
+
+.footer-nav a {
     text-decoration: none;
     color: #8987A1;
 }
-.footer-nav{
+
+.footer-nav {
     display: flex;
     gap: 48px;
     justify-content: center;
 
 }
-.footer-nav a:hover{
+
+.footer-nav a:hover {
     color: #4E47FF;
 }
-
